Bug 291810 - akonadi crashed after losing internet connection
Summary: akonadi crashed after losing internet connection
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: IMAP resource (other bugs)
Version First Reported In: 4.7
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Kevin Ottens
URL:
Keywords:
: 293327 293678 293839 294877 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-17 22:54 UTC by Gatoso
Modified: 2012-06-29 10:28 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (10.60 KB, text/plain)
2012-03-16 20:36 UTC, Karel Pazdera
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gatoso 2012-01-17 22:54:06 UTC
Application: akonadi_imap_resource (4.7)
KDE Platform Version: 4.7.4 (4.7.4) (Compiled from sources)
Qt Version: 4.8.0
Operating System: Linux 3.1.3-1-pae i686
Distribution (Platform): Archlinux Packages

-- Information about the crash:
- What I was doing when the application crashed:

I lost the internet connection by a moment and then akonadi crashed.
Thanks

The crash can be reproduced some of the time.

-- Backtrace:
Application: zuargo@aol.com de tipo Servidor de correo IMAP (akonadi_imap_resource), signal: Aborted
[Current thread is 1 (Thread 0xb455c740 (LWP 1193))]

Thread 8 (Thread 0xb31e4b40 (LWP 1275)):
#0  0xb770e424 in __kernel_vsyscall ()
#1  0xb54cb800 in poll () from /lib/libc.so.6
#2  0xb5212ebb in g_poll () from /usr/lib/libglib-2.0.so.0
#3  0xb5204136 in g_main_context_iterate.isra.19 () from /usr/lib/libglib-2.0.so.0
#4  0xb52044ca in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#5  0xb72d40e7 in QEventDispatcherGlib::processEvents (this=0xb2800468, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#6  0xb729bdad in QEventLoop::processEvents (this=0xb31e4250, flags=...) at kernel/qeventloop.cpp:149
#7  0xb729c049 in QEventLoop::exec (this=0xb31e4250, flags=...) at kernel/qeventloop.cpp:204
#8  0xb7178cad in QThread::exec (this=0x8cb01d0) at thread/qthread.cpp:501
#9  0xb63dcfe3 in KIMAP::SessionThread::run (this=0x8cb01d0) at /build/src/kdepimlibs-4.7.4/kimap/sessionthread.cpp:169
#10 0xb717bffa in QThreadPrivate::start (arg=0x8cb01d0) at thread/qthread_unix.cpp:298
#11 0xb5335d4c in start_thread () from /lib/libpthread.so.0
#12 0xb54d603e in clone () from /lib/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 7 (Thread 0xb27ffb40 (LWP 1414)):
#0  0xb52bcdcd in clock_gettime () from /lib/librt.so.1
#1  0xb71e0fa5 in do_gettime (frac=0xb27fefc0, sec=0xb27fefb8) at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0xb72d4cc6 in QTimerInfoList::updateCurrentTime (this=0xb1e01af4) at kernel/qeventdispatcher_unix.cpp:343
#4  0xb72d509a in QTimerInfoList::timerWait (this=0xb1e01af4, tm=...) at kernel/qeventdispatcher_unix.cpp:450
#5  0xb72d34d3 in timerSourcePrepareHelper (src=<optimized out>, timeout=0xb27ff0cc) at kernel/qeventdispatcher_glib.cpp:136
#6  0xb72d356d in timerSourcePrepare (source=0xb1e01ac0, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0xb52030ec in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#8  0xb5203ed7 in g_main_context_iterate.isra.19 () from /usr/lib/libglib-2.0.so.0
#9  0xb52044ca in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#10 0xb72d40e7 in QEventDispatcherGlib::processEvents (this=0xb1e00468, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#11 0xb729bdad in QEventLoop::processEvents (this=0xb27ff250, flags=...) at kernel/qeventloop.cpp:149
#12 0xb729c049 in QEventLoop::exec (this=0xb27ff250, flags=...) at kernel/qeventloop.cpp:204
#13 0xb7178cad in QThread::exec (this=0x8cacda0) at thread/qthread.cpp:501
#14 0xb63dcfe3 in KIMAP::SessionThread::run (this=0x8cacda0) at /build/src/kdepimlibs-4.7.4/kimap/sessionthread.cpp:169
#15 0xb717bffa in QThreadPrivate::start (arg=0x8cacda0) at thread/qthread_unix.cpp:298
#16 0xb5335d4c in start_thread () from /lib/libpthread.so.0
#17 0xb54d603e in clone () from /lib/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 6 (Thread 0xb1bffb40 (LWP 1436)):
#0  0xb770e424 in __kernel_vsyscall ()
#1  0xb54cb800 in poll () from /lib/libc.so.6
#2  0xb5212ebb in g_poll () from /usr/lib/libglib-2.0.so.0
#3  0xb5204136 in g_main_context_iterate.isra.19 () from /usr/lib/libglib-2.0.so.0
#4  0xb52044ca in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#5  0xb72d40e7 in QEventDispatcherGlib::processEvents (this=0xb1d05350, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#6  0xb729bdad in QEventLoop::processEvents (this=0xb1bff250, flags=...) at kernel/qeventloop.cpp:149
#7  0xb729c049 in QEventLoop::exec (this=0xb1bff250, flags=...) at kernel/qeventloop.cpp:204
#8  0xb7178cad in QThread::exec (this=0x8cf6700) at thread/qthread.cpp:501
#9  0xb63dcfe3 in KIMAP::SessionThread::run (this=0x8cf6700) at /build/src/kdepimlibs-4.7.4/kimap/sessionthread.cpp:169
#10 0xb717bffa in QThreadPrivate::start (arg=0x8cf6700) at thread/qthread_unix.cpp:298
#11 0xb5335d4c in start_thread () from /lib/libpthread.so.0
#12 0xb54d603e in clone () from /lib/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 5 (Thread 0xb13feb40 (LWP 1458)):
#0  0xb5338c50 in __pthread_mutex_unlock_usercnt () from /lib/libpthread.so.0
#1  0xb54e38d4 in pthread_mutex_unlock () from /lib/libc.so.6
#2  0xb5202776 in g_main_context_acquire () from /usr/lib/libglib-2.0.so.0
#3  0xb5203e0d in g_main_context_iterate.isra.19 () from /usr/lib/libglib-2.0.so.0
#4  0xb52044ca in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#5  0xb72d40e7 in QEventDispatcherGlib::processEvents (this=0xb0a05270, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#6  0xb729bdad in QEventLoop::processEvents (this=0xb13fe250, flags=...) at kernel/qeventloop.cpp:149
#7  0xb729c049 in QEventLoop::exec (this=0xb13fe250, flags=...) at kernel/qeventloop.cpp:204
#8  0xb7178cad in QThread::exec (this=0x8cac138) at thread/qthread.cpp:501
#9  0xb63dcfe3 in KIMAP::SessionThread::run (this=0x8cac138) at /build/src/kdepimlibs-4.7.4/kimap/sessionthread.cpp:169
#10 0xb717bffa in QThreadPrivate::start (arg=0x8cac138) at thread/qthread_unix.cpp:298
#11 0xb5335d4c in start_thread () from /lib/libpthread.so.0
#12 0xb54d603e in clone () from /lib/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 4 (Thread 0xaf5ffb40 (LWP 1542)):
#0  0xb7720ec0 in ___tls_get_addr_internal () from /lib/ld-linux.so.2
#1  0xb717b00f in get_thread_data () at thread/qthread_unix.cpp:174
#2  QThreadData::current () at thread/qthread_unix.cpp:200
#3  0xb72d35a7 in postEventSourcePrepare (s=0xaec01900, timeout=0x0) at kernel/qeventdispatcher_glib.cpp:256
#4  0xb72d3607 in postEventSourceCheck (source=0xaec01900) at kernel/qeventdispatcher_glib.cpp:272
#5  0xb520379c in g_main_context_check () from /usr/lib/libglib-2.0.so.0
#6  0xb5204190 in g_main_context_iterate.isra.19 () from /usr/lib/libglib-2.0.so.0
#7  0xb52044ca in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#8  0xb72d40e7 in QEventDispatcherGlib::processEvents (this=0xaec00468, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#9  0xb729bdad in QEventLoop::processEvents (this=0xaf5ff250, flags=...) at kernel/qeventloop.cpp:149
#10 0xb729c049 in QEventLoop::exec (this=0xaf5ff250, flags=...) at kernel/qeventloop.cpp:204
#11 0xb7178cad in QThread::exec (this=0x8cde3f0) at thread/qthread.cpp:501
#12 0xb63dcfe3 in KIMAP::SessionThread::run (this=0x8cde3f0) at /build/src/kdepimlibs-4.7.4/kimap/sessionthread.cpp:169
#13 0xb717bffa in QThreadPrivate::start (arg=0x8cde3f0) at thread/qthread_unix.cpp:298
#14 0xb5335d4c in start_thread () from /lib/libpthread.so.0
#15 0xb54d603e in clone () from /lib/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 3 (Thread 0xaebffb40 (LWP 1868)):
#0  0xb52bcdcd in clock_gettime () from /lib/librt.so.1
#1  0xb71e0fa5 in do_gettime (frac=0xaebfefc0, sec=0xaebfefb8) at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0xb72d4cc6 in QTimerInfoList::updateCurrentTime (this=0x8ce7a34) at kernel/qeventdispatcher_unix.cpp:343
#4  0xb72d509a in QTimerInfoList::timerWait (this=0x8ce7a34, tm=...) at kernel/qeventdispatcher_unix.cpp:450
#5  0xb72d34d3 in timerSourcePrepareHelper (src=<optimized out>, timeout=0xaebff0cc) at kernel/qeventdispatcher_glib.cpp:136
#6  0xb72d356d in timerSourcePrepare (source=0x8ce7a00, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0xb52030ec in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#8  0xb5203ed7 in g_main_context_iterate.isra.19 () from /usr/lib/libglib-2.0.so.0
#9  0xb52044ca in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#10 0xb72d40e7 in QEventDispatcherGlib::processEvents (this=0x90c6320, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#11 0xb729bdad in QEventLoop::processEvents (this=0xaebff250, flags=...) at kernel/qeventloop.cpp:149
#12 0xb729c049 in QEventLoop::exec (this=0xaebff250, flags=...) at kernel/qeventloop.cpp:204
#13 0xb7178cad in QThread::exec (this=0x90bef90) at thread/qthread.cpp:501
#14 0xb63dcfe3 in KIMAP::SessionThread::run (this=0x90bef90) at /build/src/kdepimlibs-4.7.4/kimap/sessionthread.cpp:169
#15 0xb717bffa in QThreadPrivate::start (arg=0x90bef90) at thread/qthread_unix.cpp:298
#16 0xb5335d4c in start_thread () from /lib/libpthread.so.0
#17 0xb54d603e in clone () from /lib/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 2 (Thread 0xaffffb40 (LWP 3138)):
#0  0xb52bcdcd in clock_gettime () from /lib/librt.so.1
#1  0xb71e0fa5 in do_gettime (frac=0xafffefc0, sec=0xafffefb8) at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0xb72d4cc6 in QTimerInfoList::updateCurrentTime (this=0xb000101c) at kernel/qeventdispatcher_unix.cpp:343
#4  0xb72d509a in QTimerInfoList::timerWait (this=0xb000101c, tm=...) at kernel/qeventdispatcher_unix.cpp:450
#5  0xb72d34d3 in timerSourcePrepareHelper (src=<optimized out>, timeout=0xaffff0cc) at kernel/qeventdispatcher_glib.cpp:136
#6  0xb72d356d in timerSourcePrepare (source=0xb0000fe8, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0xb52030ec in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#8  0xb5203ed7 in g_main_context_iterate.isra.19 () from /usr/lib/libglib-2.0.so.0
#9  0xb52044ca in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#10 0xb72d40e7 in QEventDispatcherGlib::processEvents (this=0xb0008ea0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#11 0xb729bdad in QEventLoop::processEvents (this=0xaffff250, flags=...) at kernel/qeventloop.cpp:149
#12 0xb729c049 in QEventLoop::exec (this=0xaffff250, flags=...) at kernel/qeventloop.cpp:204
#13 0xb7178cad in QThread::exec (this=0x8cac348) at thread/qthread.cpp:501
#14 0xb63dcfe3 in KIMAP::SessionThread::run (this=0x8cac348) at /build/src/kdepimlibs-4.7.4/kimap/sessionthread.cpp:169
#15 0xb717bffa in QThreadPrivate::start (arg=0x8cac348) at thread/qthread_unix.cpp:298
#16 0xb5335d4c in start_thread () from /lib/libpthread.so.0
#17 0xb54d603e in clone () from /lib/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 1 (Thread 0xb455c740 (LWP 1193)):
[KCrash Handler]
#7  0xb770e424 in __kernel_vsyscall ()
#8  0xb541b02f in raise () from /lib/libc.so.6
#9  0xb541c9b5 in abort () from /lib/libc.so.6
#10 0xb717055a in qt_message_output (msgType=QtFatalMsg, buf=0x92285d8 "ASSERT failure in createItemSyncInstance: \"Calling items retrieval methods although no item retrieval is in progress\", file /build/src/kdepimlibs-4.7.4/akonadi/resourcebase.cpp, line 152") at global/qglobal.cpp:2252
#11 0xb717075b in qt_message (msgType=QtFatalMsg, msg=0xb73138b8 "ASSERT failure in %s: \"%s\", file %s, line %d", ap=0xbfe1ceb4 "\274\td\267\210\006d\267\360\002d\267\230") at global/qglobal.cpp:2298
#12 0xb7170878 in qFatal (msg=0xb73138b8 "ASSERT failure in %s: \"%s\", file %s, line %d") at global/qglobal.cpp:2481
#13 0xb71708bd in qt_assert_x (where=0xb76409bc "createItemSyncInstance", what=0xb7640688 "Calling items retrieval methods although no item retrieval is in progress", file=0xb76402f0 "/build/src/kdepimlibs-4.7.4/akonadi/resourcebase.cpp", line=152) at global/qglobal.cpp:2007
#14 0xb75ca135 in Akonadi::ResourceBasePrivate::createItemSyncInstanceIfMissing (this=0x8db1138) at /build/src/kdepimlibs-4.7.4/akonadi/resourcebase.cpp:151
#15 0xb75c6cbc in Akonadi::ResourceBase::itemsRetrieved (this=0x8db0bd0, items=...) at /build/src/kdepimlibs-4.7.4/akonadi/resourcebase.cpp:870
#16 0x080904e1 in RetrieveItemsTask::onFlagsReceived (this=0x0, mailBox=..., uids=..., sizes=..., flags=..., messages=...) at /home/zuargo/Paquetes/kdepim-runtime/src/kdepim-runtime-4.7.4/resources/imap/retrieveitemstask.cpp:416
#17 0x08090647 in RetrieveItemsTask::qt_metacall (this=0x8f4e158, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xbfe1d168) at /home/zuargo/Paquetes/kdepim-runtime/src/build/resources/imap/retrieveitemstask.moc:92
#18 0xb72a4fbc in metacall (argv=<optimized out>, idx=12, cl=QMetaObject::InvokeMetaMethod, object=0x8f4e158) at kernel/qmetaobject.cpp:245
#19 QMetaObject::metacall (object=0x8f4e158, cl=QMetaObject::InvokeMetaMethod, idx=12, argv=0xbfe1d168) at kernel/qmetaobject.cpp:240
#20 0xb72b5cb5 in QMetaObject::activate (sender=0x8ce6ee0, m=0x80c9a88, local_signal_index=0, argv=0xbfe1d168) at kernel/qobject.cpp:3566
#21 0xb63c795f in KIMAP::FetchJob::headersReceived (this=0x8ce6ee0, _t1=..., _t2=..., _t3=..., _t4=..., _t5=...) at /build/src/build/kimap/fetchjob.moc:115
#22 0xb63cc827 in KIMAP::FetchJobPrivate::emitPendings (this=0x90974a8) at /build/src/kdepimlibs-4.7.4/kimap/fetchjob.cpp:57
#23 0xb72b5999 in QMetaObject::activate (sender=0x90974d0, m=0xb740a4b8, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3547
#24 0xb730ff55 in QTimer::timeout (this=0x90974d0) at .moc/debug-shared/moc_qtimer.cpp:148
#25 0xb72c0036 in QTimer::timerEvent (this=0x90974d0, e=0xbfe1d76c) at kernel/qtimer.cpp:280
#26 0xb72baff4 in QObject::event (this=0x90974d0, e=0xbfe1d76c) at kernel/qobject.cpp:1157
#27 0xb66aac1c in notify_helper (e=0xbfe1d76c, receiver=0x90974d0, this=0x8c63ed8) at kernel/qapplication.cpp:4550
#28 QApplicationPrivate::notify_helper (this=0x8c63ed8, receiver=0x90974d0, e=0xbfe1d76c) at kernel/qapplication.cpp:4522
#29 0xb66b0c9d in QApplication::notify (this=0x8c63ed8, receiver=0x90974d0, e=0xbfe1d76c) at kernel/qapplication.cpp:4411
#30 0xb5b83ef8 in KApplication::notify (this=0xbfe1daa0, receiver=0x90974d0, event=0xbfe1d76c) at /home/zuargo/Paquetes/kdelibs/src/kdelibs-4.7.4/kdeui/kernel/kapplication.cpp:311
#31 0xb729da4e in QCoreApplication::notifyInternal (this=0xbfe1daa0, receiver=0x90974d0, event=0xbfe1d76c) at kernel/qcoreapplication.cpp:876
#32 0xb72d68c8 in sendEvent (event=0xbfe1d76c, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#33 QTimerInfoList::activateTimers (this=0x8c6070c) at kernel/qeventdispatcher_unix.cpp:611
#34 0xb72d3638 in timerSourceDispatch (source=0x8c606d8) at kernel/qeventdispatcher_glib.cpp:186
#35 timerSourceDispatch (source=0x8c606d8) at kernel/qeventdispatcher_glib.cpp:180
#36 0xb72d3672 in idleTimerSourceDispatch (source=0x8c60740) at kernel/qeventdispatcher_glib.cpp:233
#37 0xb5203adf in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#38 0xb5204238 in g_main_context_iterate.isra.19 () from /usr/lib/libglib-2.0.so.0
#39 0xb52044ca in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#40 0xb72d4087 in QEventDispatcherGlib::processEvents (this=0x8c2a838, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#41 0xb676ddda in QGuiEventDispatcherGlib::processEvents (this=0x8c2a838, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#42 0xb729bdad in QEventLoop::processEvents (this=0xbfe1da04, flags=...) at kernel/qeventloop.cpp:149
#43 0xb729c049 in QEventLoop::exec (this=0xbfe1da04, flags=...) at kernel/qeventloop.cpp:204
#44 0xb72a1c8a in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#45 0xb66a89d4 in QApplication::exec () at kernel/qapplication.cpp:3811
#46 0xb75c481e in Akonadi::ResourceBase::init (r=0x8db0bd0) at /build/src/kdepimlibs-4.7.4/akonadi/resourcebase.cpp:393
#47 0x0805f737 in Akonadi::ResourceBase::init<ImapResource> (argc=3, argv=0xbfe1db74) at /usr/include/akonadi/resourcebase.h:188
#48 0x08059bfb in main (argc=3, argv=0xbfe1db74) at /home/zuargo/Paquetes/kdepim-runtime/src/kdepim-runtime-4.7.4/resources/imap/imapresource.cpp:599

This bug may be a duplicate of or related to bug 277368.

Possible duplicates by query: bug 277368.

Reported using DrKonqi
Comment 1 David Faure 2012-02-11 18:55:17 UTC
Git commit 816813cc45afd41ce71d70a41d004bbefe01181d by David Faure.
Committed on 11/02/2012 at 19:54.
Pushed by dfaure into branch 'KDE/4.8'.

Fix assert when going offline and online again.

Old tasks kept running, which confused the resourcebase.
FIXED-IN: 4.8.1

M  +2    -0    resources/imap/imapresource.cpp

http://commits.kde.org/kdepim-runtime/816813cc45afd41ce71d70a41d004bbefe01181d
Comment 2 David Faure 2012-02-11 18:55:53 UTC
Git commit 71f5b78652a92c689d34b4dd8f8403cb175a2fcb by David Faure.
Committed on 11/02/2012 at 19:54.
Pushed by dfaure into branch 'master'.

Fix assert when going offline and online again.

Old tasks kept running, which confused the resourcebase.
FIXED-IN: 4.8.1
(cherry picked from commit 816813cc45afd41ce71d70a41d004bbefe01181d)

M  +2    -0    resources/imap/imapresource.cpp

http://commits.kde.org/kdepim-runtime/71f5b78652a92c689d34b4dd8f8403cb175a2fcb
Comment 3 Kevin Ottens 2012-02-11 23:05:08 UTC
*** Bug 293839 has been marked as a duplicate of this bug. ***
Comment 4 Kevin Ottens 2012-02-11 23:05:53 UTC
*** Bug 293678 has been marked as a duplicate of this bug. ***
Comment 5 Kevin Ottens 2012-02-11 23:07:11 UTC
*** Bug 293327 has been marked as a duplicate of this bug. ***
Comment 6 Christophe Marin 2012-02-26 18:10:23 UTC
*** Bug 294877 has been marked as a duplicate of this bug. ***
Comment 7 Karel Pazdera 2012-03-16 20:36:25 UTC
Created attachment 69681 [details]
New crash information added by DrKonqi

akonadi_imap_resource (4.8) on KDE Platform 4.8.1 (4.8.1) using Qt 4.7.4

- What I was doing when the application crashed:
Nothing, Akonadi probably checked connection, showed many of message about lost connection and then crashed. I am using GMail.

-- Backtrace (Reduced):
#11 0x00007fe8dc89540f in Akonadi::ResourceBasePrivate::createItemSyncInstanceIfMissing (this=0x7b1eb0) at /var/tmp/portage/kde-base/kdepimlibs-4.8.1/work/kdepimlibs-4.8.1/akonadi/resourcebase.cpp:154
#12 0x00007fe8dc892675 in Akonadi::ResourceBase::itemsRetrieved (this=<optimized out>, items=...) at /var/tmp/portage/kde-base/kdepimlibs-4.8.1/work/kdepimlibs-4.8.1/akonadi/resourcebase.cpp:909
#13 0x000000000044b82c in RetrieveItemsTask::onFlagsReceived (this=0x7eaa80, mailBox=<optimized out>, uids=..., sizes=<optimized out>, flags=..., messages=<optimized out>) at /var/tmp/portage/kde-base/kdepim-runtime-4.8.1/work/kdepim-runtime-4.8.1/resources/imap/retrieveitemstask.cpp:416
#14 0x000000000044b980 in RetrieveItemsTask::qt_metacall (this=0x7eaa80, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fffcd113dd0) at /var/tmp/portage/kde-base/kdepim-runtime-4.8.1/work/kdepim-runtime-4.8.1_build/resources/imap/retrieveitemstask.moc:92
[...]
#16 0x00007fe8dad4bcc4 in KIMAP::FetchJob::headersReceived (this=<optimized out>, _t1=<optimized out>, _t2=<optimized out>, _t3=<optimized out>, _t4=<optimized out>, _t5=<optimized out>) at /var/tmp/portage/kde-base/kdepimlibs-4.8.1/work/kdepimlibs-4.8.1_build/kimap/fetchjob.moc:101
Comment 8 David Faure 2012-06-29 10:28:58 UTC
Git commit 8b14e4fc7f6c766a91535771402e91e0e780c032 by David Faure.
Committed on 29/06/2012 at 10:18.
Pushed by dfaure into branch 'KDE/4.9'.

Ensure to cancel the scheduler's task when going offline.

The imapresource internal task was deleted, but the scheduler wasn't told,
so it would remain stuck.

M  +4    -3    resources/imap/imapresource.cpp
M  +3    -2    resources/imap/imapresource.h
M  +6    -2    resources/imap/resourcetask.cpp
M  +2    -0    resources/imap/resourcetask.h

http://commits.kde.org/kdepim-runtime/8b14e4fc7f6c766a91535771402e91e0e780c032