Fix assert when going offline and online again.

Old tasks kept running, which confused the resourcebase.
BUG: 291810
FIXED-IN: 4.8.1
(cherry picked from commit 816813cc45afd41ce71d70a41d004bbefe01181d)